# ifeffit

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  KNOWN_BUGS  Makefile.in  NEWS  PGPLOT_install  README  README.MACOSX  README.PGPLOT  README.WIN32  THANKS  configure  configure.in  horae_update  iconf_flib  iconf_iff  iconf_pgplot  iconf_term  mkinstalldirs  reinstall
TestFeff6/Orig/: feff.inp  feff.run  phase.pad
doc/: Makefile.in  README  feffit_alg.tex  feffit_unc.tex
doc/Common/: fancybox.sty  ifx.bib
doc/RefMan/: IFEFFIT.out  Makefile  basics.tex  biblio.tex  commands.tex  examples.tex  fitting.tex  fourier.tex  glossary.tex  ifeffit.bbl  ifmacs.tex  ifmacs_com.tex  ifmacs_html.tex  ifmacs_pdf.tex  ifx.bib  install.tex  intro.tex  iofiles.tex  license.tex  macros.tex  minimize.tex  plotting.tex  refman.tex  scripting.tex  structure.tex  title.tex  title_html.tex  xafsprocess.tex
doc/Tutorial/: Makefile  ifmacs_com.tex  ifmacs_pdf.tex  ifmacs_ps.tex  license.tex  title_html.tex  title_pdf.tex  tutor.tex
doc/scripts/: FixPDFout  Fixsbox  MakeArchive  dot.latex2html-init  fixind  fixtex  latexmk  pstoimg  pstopng
examples/: IFF_LIST  README  help.iff  u.iff
examples/Anomalous/: calc_f1f2.iff  diffkk_simple.iff
examples/Convolve/: conv.iff
examples/Data_Processing/: b.chi  ifeffit.sav  interpolote.iff  random.iff  sro.chi  stats.iff  write_exa.iff
examples/FF2CHI/: FF2CHI.iff  b.iff  debye.iff  einstein.iff  erase_feffdat.iff  fft_phase_corrections.iff  get_path.iff  m.iff  save_reff.iff  test_terp.iff  torture.iff  u.iff  use_feffdat.iff
examples/FFT/: fft_phase_corrections.iff  ft_pc.iff  t2.iff  t_1.iff  test.iff  test.py  test2.iff  w.iff  windows.iff
examples/Feffit/: A.iff  AA  Cu3t_bkg.iff  Cu_3temps.iff  F1.iff  F12.iff  F1_ei.iff  F1_so2.iff  F3.iff  F_changepath.iff  Feffit.iff  Fit_bkg.iff  Fit_ksp.iff  Fit_qsp.iff  Fit_restrain.iff  Fit_rsp.iff  MK1.iff  Multi-kweight.iff  Multi-kweight_bkg.iff  SFit.iff  SimpleFit.iff  f.iff  f2.iff  t.iff  t2.iff  tmp.py  u0.sav  u1.sav  u2.sav
examples/Lytle/: Lytle.iff
examples/Macros/: DO.iff  M1.if  Macros.iff  W.iff  ave.xmu  iff.out  quit.iff  test.iff  tmp.iff
examples/Minimize/: Debye_Eins.iff  line_fit.iff  simple.iff  spl.iff  t1.iff  x.iff  x1.iff  x2.iff  xrd_fit.iff  xrd_fit2.iff
examples/Plotting/: arrows.iff  fonts.iff  keys.iff  ppoints.iff  styles.iff  text-strings.iff
examples/Pre_Edge/: bkg_cl.iff  clnorm  pre.iff  s.iff
examples/RefMan/: Out.chi  basic.iff  feffit1.iff  x.out
examples/Spline/: autobk.iff  change_rbkg.iff  clamp.iff  m.chi  m.iff  u.iff  with_clamps.iff  with_std.iff
examples/autobk_feffit/: README
examples/data/: Cu2S.xmu  b.xmu  cu50k.chi  cu_150k.xmu  feo.xmu  mno.chi  mno.xmu
examples/diffkk/: README  cu_exp.xmu  diffkk.inp  diffkk.sav  diffkk_cu.inp  dk-exp.inp  dk-feff.inp  dk_jox.inp  fe-xafs.xmu  fe_xafs_diffkk.out  feff.err  feff.inp  feff.run  test.out
examples/exp2feff/: Comp.iff  Fourier.iff  exp2feff.py  exp2feff.sav  fff2  filter.chi
examples/restraint/: r1.iff  r2.iff  restrain_bv.iff
pgplot_extras/: gidriv.f  gidriv_v2.f
readline/: Makefile.in  README.IFEFFIT  configure  configure.in
readline/shlib/: Makefile
src/: Makefile.in
src/Feff6X/: Makefile.in  Notes  Potentials.f  ReadFeffInp.f  ReadXYZ.f  atom.f  chopen.f  const.h  dim.h  feff.f  fovrg.f  genfmt.f  head.f  indata.f  istprm.f  ovrlp.f  phase.f  phmesh.f  potph.f  prcrit.f  quinn.f  rdinp.f  sidx.f  sumax.f  xcpot.f  xx.f
src/autobk/: A  Makefile.in  autdat.f  autfun.f  autinp.f  autint.f  autlog.f  autnls.f  autobk.f  autobk.h  autout.f  getcom.f  misc_file.f  setsys.f
src/cldata/: Makefile.in
src/cmdline/: COPYING  Makefile.in  README  USE_PGI  iff_shell.c
src/diffkk/: Makefile.in  convl2.f  diffkk.f  dkcom.f  dkfcn.f  dkfit.f  dkinp.f  dklog.f  fpinp.f  fplog.f  in2col.f  izgues.f  kkmclf.f  kkmclr.f  lib.f  outasc.f  str2at.f
src/feff6/: Makefile.in  Makefile.unx  feff.f  fmtrxi.f  genfmt.f  genfmt_misc.f  head.f  mkptz.f  mmtr.f  (+13 more)
wrappers/: Fortran.Notes  Makefile.in  README  perlversion
(+325 files in other folders)
